# linear-4-terminal

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_GUIDE.md  FILTER_GUIDE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  RELEASE.md  for-claude.md  homebrew-formula.rb  homebrew-setup.md  install.sh  test_crash.sh  test_interactive.sh
docs/: state-management.md
docs/plans/: 2026-02-28-team-project-filter-design.md  2026-02-28-team-project-filter.md  2026-02-28-ux-redesign-design.md  2026-02-28-ux-redesign.md
examples/: filter_examples.rs
logs/94730320-f99f-4b75-866f-2b83158aefed/: chat.json  notification.json  stop.json
scripts/: build-release.sh
src/: cli_context.rs  constants.rs  error.rs  graphql_fields.rs  lib.rs  logging.rs  main.rs
src/client/: graphql.rs  linear_client.rs  mod.rs
src/commands/: auth.rs  bulk.rs  comments.rs  create.rs  delete.rs  filter_help.rs  git.rs  issues.rs  mod.rs  projects.rs  search.rs  teams.rs  update.rs  whoami.rs
src/config/: config.rs  mod.rs
src/filtering/: adapter.rs  builder.rs  mod.rs  parser.rs  query.rs
src/formatting/: issues.rs  markdown.rs  mod.rs  theme.rs  utils.rs
src/interactive/: app.rs  event.rs  handlers.rs  keys.rs  layout.rs  mod.rs  notifications.rs  state.rs  state_adapter.rs  state_example.rs  ui.rs
src/interactive/panels/: detail.rs  header.rs  list.rs  mod.rs  projects.rs  (+1 more)
src/models/: comment.rs  graphql.rs  issue.rs  mod.rs  project.rs  user.rs
src/tests/: cli_context_tests.rs  error_tests.rs  filter_builder_tests.rs  mod.rs  theme_tests.rs
tests/: filter_integration.rs
(+8 files in other folders)
