[package]
name = "linear-cli"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive CLI tool for interacting with Linear's API"
license = "MIT"

[[bin]]
name = "linear"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
colored = "2.1"
chrono = "0.4.41"
